--- a/src/app/login/main/main.page.html
+++ b/src/app/login/main/main.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/home">Back</ion-back-button>
+    </ion-buttons>
     <ion-title>main</ion-title>
   </ion-toolbar>
 </ion-header>
