--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -30,7 +30,14 @@
       <ion-input type="password" required></ion-input>
       <ion-modal [keepContentsMounted]="true">
         <ng-template>
-          <ion-datetime id="date" presentation="date" [preferWheel]="true" [showDefaultButtons]="true" doneText="All set" cancelText="Nevermind"></ion-datetime>
+          <ion-datetime
+            id="date"
+            presentation="date"
+            [preferWheel]="true"
+            [showDefaultButtons]="true"
+            doneText="All set"
+            cancelText="Nevermind">
+          </ion-datetime>
         </ng-template>
       </ion-modal>
     </ion-item>
