--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -43,7 +43,7 @@
     </ion-item>
     <ion-row>
       <ion-col>
-        <ion-button type="submit" expand="block" (click)="onSignUp()">Sign Up</ion-button>
+        <ion-button slot="" shape="round" (click)="onSignUp()">Sign Up</ion-button>
       </ion-col>
     </ion-row>
   </form>
