--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar color="primary">
     <ion-title>Home</ion-title>
   </ion-toolbar>
@@ -12,9 +12,9 @@
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
         <ion-buttons>
-          <ion-button expand="block" (click)="OnLogIn()">Log in</ion-button>
-          <br>
-          <ion-button expand="block" (click)="OnSignIn()">Sign in</ion-button>
+          <ion-button shape="round" (click)="onLogIn()">Log in</ion-button>
+          <br><br>
+          <ion-button shape="round" (click)="onSignIn()">Sign in</ion-button>
         </ion-buttons>
       </ion-col>
     </ion-row>
