--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -18,7 +18,7 @@
     </ion-item>
     <br>
     <ion-row>
-      <ion-col>
+      <ion-col class="ion-text-center">
         <ion-button shape="round" (click)="onSignIn()">Sign In</ion-button>
       </ion-col>
     </ion-row>
