--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -42,8 +42,8 @@
       </ion-modal>
     </ion-item>
     <ion-row>
-      <ion-col>
-        <ion-button slot="" shape="round" (click)="onSignUp()">Sign Up</ion-button>
+      <ion-col class="ion-text-center">
+        <ion-button shape="round" (click)="onSignUp()">Sign Up</ion-button>
       </ion-col>
     </ion-row>
   </form>
