--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,11 +11,9 @@
     <ion-grid>
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
-        <ion-buttons>
           <ion-button shape="round" (click)="onLogIn()">Log in</ion-button>
           <br><br>
-          <ion-button shape="round" (click)="onSignIn()">Sign in</ion-button>
-        </ion-buttons>
+          <ion-button shape="round" (click)="onSignUp()">Sign Up</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
