--- a/src/app/login/main/main.page.html
+++ b/src/app/login/main/main.page.html
@@ -1,12 +1,42 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/home">Back</ion-back-button>
+      <ion-back-button defaultHref="/home"></ion-back-button>
     </ion-buttons>
-    <ion-title>main</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <div class="image">
+    <img src="../../../assets/icon/ESA_Logo.png" alt="ESA">
+  </div>
+  <ion-grid>
+    <ion-row>
+      <ion-col class="ion-text-center">
+        <ion-button shape="round">Werkvorschrift C1</ion-button>
+        <br><br>
+        <ion-button shape="round">Werkvorschrift C3</ion-button>
+        <br><br>
+        <ion-button shape="round">Werkvorschrift C4</ion-button>
+        <br><br>
+        <ion-button shape="round">Werkvorschrift C5</ion-button>
+        <br><br>
+        <ion-button shape="round">Werkvorschrift C6</ion-button>
+        <br><br>
+        <ion-button shape="round">Werkvorschrift C7</ion-button>
+        <br><br>
+        <ion-button shape="round">Werkvorschrift C8</ion-button>
+        <br><br>
+        <ion-button shape="round">Werkvorschrift C10</ion-button>
+        <br><br>
+        <ion-button shape="round">Werkvorschrift C12</ion-button>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col class="ion-text-center">
+        <ion-button shape="round">Select All</ion-button>
+        <ion-button shape="round">Unselect All</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
