--- a/src/app/login/main/main.page.html
+++ b/src/app/login/main/main.page.html
@@ -13,10 +13,11 @@
   <ion-grid>
     <ion-row>
       <ion-col class="ion-text-center">
-        <ion-button shape="round">Werkvorschrift C1</ion-button>
+        <ion-button shape="round" (click)="openSelect()">Werkvorschrift C1</ion-button>
+
         <br><br>
         <ion-button shape="round">Werkvorschrift C3</ion-button>
-        <br><br>
+         <br><br>
         <ion-button shape="round">Werkvorschrift C4</ion-button>
         <br><br>
         <ion-button shape="round">Werkvorschrift C5</ion-button>
