--- a/src/app/login/main/main.page.html
+++ b/src/app/login/main/main.page.html
@@ -13,24 +13,41 @@
   <ion-grid>
     <ion-row>
       <ion-col class="ion-text-center">
-        <ion-button shape="round" (click)="openSelect()">Werkvorschrift C1</ion-button>
-
+        <ion-select multiple="true" #werkschriftSelect placeholder="Werkvorschrift C1">
+          <ion-select-option *ngFor="let wv of wvs" >{{wv.chapter}} {{wv.description}}</ion-select-option>
+        </ion-select>
         <br><br>
-        <ion-button shape="round">Werkvorschrift C3</ion-button>
+        <ion-select multiple="true" #werkschriftSelect placeholder="Werkvorschrift C3">
+          <ion-select-option *ngFor="let wv of wvs" >{{wv.chapter}} {{wv.description}}</ion-select-option>
+        </ion-select>
          <br><br>
-        <ion-button shape="round">Werkvorschrift C4</ion-button>
+        <ion-select multiple="true" #werkschriftSelect placeholder="Werkvorschrift C4">
+          <ion-select-option *ngFor="let wv of wvs" >{{wv.chapter}} {{wv.description}}</ion-select-option>
+        </ion-select>
         <br><br>
-        <ion-button shape="round">Werkvorschrift C5</ion-button>
+        <ion-select multiple="true" #werkschriftSelect placeholder="Werkvorschrift C5">
+          <ion-select-option *ngFor="let wv of wvs" >{{wv.chapter}} {{wv.description}}</ion-select-option>
+        </ion-select>
         <br><br>
-        <ion-button shape="round">Werkvorschrift C6</ion-button>
+        <ion-select multiple="true" #werkschriftSelect placeholder="Werkvorschrift C6">
+          <ion-select-option *ngFor="let wv of wvs" >{{wv.chapter}} {{wv.description}}</ion-select-option>
+        </ion-select>
         <br><br>
-        <ion-button shape="round">Werkvorschrift C7</ion-button>
+        <ion-select multiple="true" #werkschriftSelect placeholder="Werkvorschrift C7">
+          <ion-select-option *ngFor="let wv of wvs" >{{wv.chapter}} {{wv.description}}</ion-select-option>
+        </ion-select>
         <br><br>
-        <ion-button shape="round">Werkvorschrift C8</ion-button>
+        <ion-select multiple="true" #werkschriftSelect placeholder="Werkvorschrift C8">
+          <ion-select-option *ngFor="let wv of wvs" >{{wv.chapter}} {{wv.description}}</ion-select-option>
+        </ion-select>
         <br><br>
-        <ion-button shape="round">Werkvorschrift C10</ion-button>
+        <ion-select multiple="true" #werkschriftSelect placeholder="Werkvorschrift C10">
+          <ion-select-option *ngFor="let wv of wvs" >{{wv.chapter}} {{wv.description}}</ion-select-option>
+        </ion-select>
         <br><br>
-        <ion-button shape="round">Werkvorschrift C12</ion-button>
+        <ion-select multiple="true" #werkschriftSelect placeholder="Werkvorschrift C12">
+          <ion-select-option *ngFor="let wv of wvs" >{{wv.chapter}} {{wv.description}}</ion-select-option>
+        </ion-select>
       </ion-col>
     </ion-row>
     <ion-row>
