--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/home">Back</ion-back-button>
+      <ion-back-button (click)="onBackHome()">Back</ion-back-button>
     </ion-buttons>
     <ion-title>Log In</ion-title>
   </ion-toolbar>
@@ -19,7 +19,7 @@
     <br>
     <ion-row>
       <ion-col class="ion-text-center">
-        <ion-button shape="round" (click)="onSignIn()">Sign In</ion-button>
+        <ion-button shape="round" [routerLink]="['signIn/main']">Sign In</ion-button>
       </ion-col>
     </ion-row>
   </form>
