--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -19,7 +19,7 @@
     <br>
     <ion-row>
       <ion-col class="ion-text-center">
-        <ion-button shape="round" [routerLink]="['signIn/main']">Sign In</ion-button>
+        <ion-button shape="round" (click)="onMain()">Sign In</ion-button>
       </ion-col>
     </ion-row>
   </form>
