--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,9 +11,9 @@
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
-          <ion-button shape="round" [routerLink]="['/signIn']">Log in</ion-button>
+        <ion-button shape="round" (click)="onLogIn()">Log in</ion-button>
             <br><br>
-          <ion-button shape="round" [routerLink]="['/signUp']">Sign Up</ion-button>
+        <ion-button shape="round" (click)="onSignUp()">Sign Up</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
